tests/ui/traits/object/coherence-with-implied-auto-traits.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `(dyn Foo + 'static)`
  --> $DIR/coherence-with-implied-auto-traits.rs:6:1
   |
LL | impl Bar for dyn Foo {}
   | -------------------- first implementation here
LL | impl Bar for dyn Foo + Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Foo + 'static)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
